# bmap_mcp

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.bmad/architecture/: bmad_mcp_server_technical_architecture.md
.bmad/checklists/: requirements_validation_pm_checklist.md
.bmad/ideation/: project_brief_bmad_mcp_server_-_comprehensive_ai-driven_development_methodology_platform.md
.bmad/prd/: bmad_mcp_server_prd.md
.clinerules/: rules.md
concept/: BMAD MCP Server - Additional Tool Implementations.md  BMAD MCP Server Docker and Documentation.md  BMAD MCP Server Implementation.md  BMAD MCP Server Project Brief.md  BMAD MCP Server Usage Example.md  BMAD-MCP-Concept.md  BMAD-project-breakdown.md  BMAD-project-review.md
docs/: configuration.md  development-workflow.md  docker-deployment.md  getting-started.md  ide-integration.md  index.md  tool_catalog.md  troubleshooting.md
scripts/: start_sse.py  start_stdio.py
src/bmad_mcp_server/: __init__.py  main.py  server.py
src/bmad_mcp_server/checklists/: __init__.py  architect_checklist.md  change_checklist.md  frontend_architecture_checklist.md  loader.py  pm_checklist.md  story_dod_checklist.md  story_draft_checklist.md  story_review_checklist.md
src/bmad_mcp_server/crewai_integration/: __init__.py  agents.py  config.py
src/bmad_mcp_server/templates/: __init__.py  architecture_tmpl.md  course_correction_tmpl.md  frontend_architecture_tmpl.md  loader.py  prd_tmpl.md  project_brief_tmpl.md  story_tmpl.md
src/bmad_mcp_server/tools/: __init__.py  base.py
src/bmad_mcp_server/tools/architecture/: __init__.py  create_architecture.py  frontend_architecture.py
src/bmad_mcp_server/tools/planning/: __init__.py  generate_prd.py  project_brief.py  validate_requirements.py
src/bmad_mcp_server/tools/story/: __init__.py  create_story.py  validate_story.py
src/bmad_mcp_server/tools/validation/: __init__.py  correct_course.py  run_checklist.py
src/bmad_mcp_server/utils/: __init__.py  logging.py  state_manager.py
tests/: __init__.py  test_basic.py
